// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`PatronsSearch ResultsList tests should not render when empty results 1`] = `
<ResultsTable
  columns={
    Array [
      Object {
        "field": "",
        "formatter": [Function],
        "title": "view",
      },
      Object {
        "field": "metadata.id",
        "title": "ID",
      },
      Object {
        "field": "metadata.name",
        "title": "Name",
      },
      Object {
        "field": "metadata.email",
        "title": "Email",
      },
    ]
  }
  currentPage={1}
  data={Array []}
  headerActionClickHandler={null}
  headerActionComponent={null}
  paginationComponent={null}
  seeAllComponent={null}
  showAllResults={false}
  showMaxRows={10}
  singleLine={false}
  subtitle=""
  title=""
>
  <Grid>
    <div
      className="ui grid"
    >
      <GridRow>
        <div
          className="row"
        >
          <GridColumn
            verticalAlign="middle"
            width={16}
          >
            <div
              className="middle aligned sixteen wide column"
            />
          </GridColumn>
          <GridColumn
            textAlign="right"
            width={8}
          >
            <div
              className="right aligned eight wide column"
            />
          </GridColumn>
        </div>
      </GridRow>
    </div>
  </Grid>
  <Message
    data-test="no-results"
  >
    <div
      className="ui message"
      data-test="no-results"
    >
      There are no 
      .
    </div>
  </Message>
</ResultsTable>
`;

exports[`PatronsSearch ResultsList tests should render a list of results 1`] = `
<ResultsTable
  columns={
    Array [
      Object {
        "field": "",
        "formatter": [Function],
        "title": "view",
      },
      Object {
        "field": "metadata.id",
        "title": "ID",
      },
      Object {
        "field": "metadata.name",
        "title": "Name",
      },
      Object {
        "field": "metadata.email",
        "title": "Email",
      },
    ]
  }
  currentPage={1}
  data={
    Array [
      Object {
        "id": 3,
        "metadata": Object {
          "email": "admin@test.ch",
          "links": Object {
            "self": "https://localhost:5000/api/patrons/3",
          },
          "name": "admin",
        },
      },
    ]
  }
  headerActionClickHandler={null}
  headerActionComponent={null}
  paginationComponent={null}
  seeAllComponent={null}
  showAllResults={false}
  showMaxRows={10}
  singleLine={false}
  subtitle=""
  title=""
>
  <Grid>
    <div
      className="ui grid"
    >
      <GridRow>
        <div
          className="row"
        >
          <GridColumn
            verticalAlign="middle"
            width={16}
          >
            <div
              className="middle aligned sixteen wide column"
            />
          </GridColumn>
          <GridColumn
            textAlign="right"
            width={8}
          >
            <div
              className="right aligned eight wide column"
            />
          </GridColumn>
        </div>
      </GridRow>
    </div>
  </Grid>
  <Table
    as="table"
    compact={true}
    selectable={true}
    striped={true}
  >
    <table
      className="ui selectable striped compact table"
    >
      <ResultsTableHeader
        columns={
          Array [
            Object {
              "field": "",
              "formatter": [Function],
              "title": "view",
            },
            Object {
              "field": "metadata.id",
              "title": "ID",
            },
            Object {
              "field": "metadata.name",
              "title": "Name",
            },
            Object {
              "field": "metadata.email",
              "title": "Email",
            },
          ]
        }
      >
        <TableHeader
          as="thead"
        >
          <thead
            className=""
          >
            <TableRow
              as="tr"
              cellAs="td"
              data-test="header"
            >
              <tr
                className=""
                data-test="header"
              >
                <TableHeaderCell
                  as="th"
                  key="view"
                >
                  <TableCell
                    as="th"
                    className=""
                  >
                    <th
                      className=""
                    >
                      view
                    </th>
                  </TableCell>
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                  key="ID"
                >
                  <TableCell
                    as="th"
                    className=""
                  >
                    <th
                      className=""
                    >
                      ID
                    </th>
                  </TableCell>
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                  key="Name"
                >
                  <TableCell
                    as="th"
                    className=""
                  >
                    <th
                      className=""
                    >
                      Name
                    </th>
                  </TableCell>
                </TableHeaderCell>
                <TableHeaderCell
                  as="th"
                  key="Email"
                >
                  <TableCell
                    as="th"
                    className=""
                  >
                    <th
                      className=""
                    >
                      Email
                    </th>
                  </TableCell>
                </TableHeaderCell>
              </tr>
            </TableRow>
          </thead>
        </TableHeader>
      </ResultsTableHeader>
      <ResultsTableBody
        columns={
          Array [
            Object {
              "field": "",
              "formatter": [Function],
              "title": "view",
            },
            Object {
              "field": "metadata.id",
              "title": "ID",
            },
            Object {
              "field": "metadata.name",
              "title": "Name",
            },
            Object {
              "field": "metadata.email",
              "title": "Email",
            },
          ]
        }
        rows={
          Array [
            Object {
              "id": 3,
              "metadata": Object {
                "email": "admin@test.ch",
                "links": Object {
                  "self": "https://localhost:5000/api/patrons/3",
                },
                "name": "admin",
              },
            },
          ]
        }
      >
        <TableBody
          as="tbody"
        >
          <tbody
            className=""
          >
            <TableRow
              as="tr"
              cellAs="td"
              data-test={3}
              key="3"
            >
              <tr
                className=""
                data-test={3}
              >
                <TableCell
                  as="td"
                  data-test="view-3"
                  key="view-3"
                >
                  <td
                    className=""
                    data-test="view-3"
                  >
                    <Button
                      as="button"
                      onClick={[MockFunction]}
                    >
                      <Ref
                        innerRef={
                          Object {
                            "current": <button
                              class="ui button"
                            >
                              View
                            </button>,
                          }
                        }
                      >
                        <RefFindNode
                          innerRef={
                            Object {
                              "current": <button
                                class="ui button"
                              >
                                View
                              </button>,
                            }
                          }
                        >
                          <button
                            className="ui button"
                            onClick={[Function]}
                          >
                            View
                          </button>
                        </RefFindNode>
                      </Ref>
                    </Button>
                  </td>
                </TableCell>
                <TableCell
                  as="td"
                  data-test="ID-3"
                  key="ID-3"
                >
                  <td
                    className=""
                    data-test="ID-3"
                  >
                    -
                  </td>
                </TableCell>
                <TableCell
                  as="td"
                  data-test="Name-3"
                  key="Name-3"
                >
                  <td
                    className=""
                    data-test="Name-3"
                  >
                    admin
                  </td>
                </TableCell>
                <TableCell
                  as="td"
                  data-test="Email-3"
                  key="Email-3"
                >
                  <td
                    className=""
                    data-test="Email-3"
                  >
                    admin@test.ch
                  </td>
                </TableCell>
              </tr>
            </TableRow>
          </tbody>
        </TableBody>
      </ResultsTableBody>
      <ResultsTableFooter
        allRowsNumber={1}
        columnsNumber={4}
        currentPage={1}
        paginationComponent={null}
        seeAllComponent={null}
        showAllResults={false}
        showMaxRows={10}
      />
    </table>
  </Table>
</ResultsTable>
`;
